--- a/LabJack/LJM/ljm_startup_configs.json
+++ b/LabJack/LJM/ljm_startup_configs.json
@@ -1,6 +1,6 @@
 // ljm_startup_configs.json:
 //   This is the configurations file that is loaded when LJM is started up.
-//   Distributed with LJM version 1.0402.
+//   Distributed with LJM version 1.0500.
 //
 //   This file (and the containing folder) may be overwritten when LJM
 //   updates, so if you'd like to make changes to the configurations that are
@@ -72,6 +72,10 @@
                                                            "LJM_STREAM_RECEIVE_TIMEOUT_MODE_MANUAL"
                                                        ]},
     {"LJM_STREAM_RECEIVE_TIMEOUT_MS":"default",        "type":"integer"},
-    {"LJM_STREAM_TRANSFERS_PER_SECOND":"default",      "type":"integer"}
+    {"LJM_STREAM_TRANSFERS_PER_SECOND":"default",      "type":"integer"},
+    {"LJM_ZERO_LENGTH_ARRAY_MODE":"default",           "type":"integer", "values":[
+                                                           "LJM_ZERO_LENGTH_ARRAY_ERROR",
+                                                           "LJM_ZERO_LENGTH_ARRAY_IGNORE_OPERATION"
+                                                       ]}
   ]
 }
