--- a/LabJack/LJM/ljm_startup_configs.json
+++ b/LabJack/LJM/ljm_startup_configs.json
@@ -1,6 +1,6 @@
 // ljm_startup_configs.json:
 //   This is the configurations file that is loaded when LJM is started up.
-//   Distributed with LJM version 1.0401.
+//   Distributed with LJM version 1.0601.
 //
 //   This file (and the containing folder) may be overwritten when LJM
 //   updates, so if you'd like to make changes to the configurations that are
@@ -27,6 +27,8 @@
   [
     {"LJM_ALLOWS_AUTO_CONDENSE_ADDRESSES":"default",   "type":"boolean", "values":[true, false]},
     {"LJM_ALLOWS_AUTO_MULTIPLE_FEEDBACKS":"default",   "type":"boolean", "values":[true, false]},
+    {"LJM_AUTO_RECONNECT_STICKY_CONNECTION":"default", "type":"boolean", "values":[true, false]},
+    {"LJM_AUTO_RECONNECT_STICKY_SERIAL":"default",     "type":"boolean", "values":[true, false]},
     {"LJM_DEBUG_LOG_BUFFER_MAX_SIZE":"default",        "type":"integer"},
     {"LJM_DEBUG_LOG_FILE":"default",                   "type":"string"},
     {"LJM_DEBUG_LOG_FILE_MAX_SIZE":"default",          "type":"integer"},
@@ -43,10 +45,6 @@
                                                        ]},
     {"LJM_DEBUG_LOG_SLEEP_TIME_MS":"default",          "type":"integer"},
     {"LJM_ERROR_CONSTANTS_FILE":"default",             "type":"string"},
-    {"LJM_HEAL_CONNECTION_MODE":"default",             "type":"integer", "values":[
-                                                           "LJM_HEAL_CONNECTION_NEVER",
-                                                           "LJM_HEAL_CONNECTION_MODE_BY_OPEN_PARAMETERS"
-                                                       ]},
     {"LJM_LISTALL_NUM_ATTEMPTS_ETHERNET":"default",    "type":"integer"},
     {"LJM_LISTALL_NUM_ATTEMPTS_WIFI":"default",        "type":"integer"},
     {"LJM_LISTALL_THREADED_ETHERNET":"default",        "type":"boolean", "values":[true, false]},
