--- a/LabJack/LJM/ljm_startup_configs.json
+++ b/LabJack/LJM/ljm_startup_configs.json
@@ -1,6 +1,6 @@
 // ljm_startup_configs.json:
 //   This is the configurations file that is loaded when LJM is started up.
-//   Distributed with LJM version 1.0601.
+//   Distributed with LJM version 1.0701.
 //
 //   This file (and the containing folder) may be overwritten when LJM
 //   updates, so if you'd like to make changes to the configurations that are
@@ -61,6 +61,7 @@
     {"LJM_RETRY_ON_TRANSACTION_ID_MISMATCH":"default", "type":"boolean", "values":[true, false]},
     {"LJM_SEND_RECEIVE_TIMEOUT_MS":"default",          "type":"integer"},
     {"LJM_STREAM_BUFFER_MAX_NUM_SECONDS":"default",    "type":"integer"},
+    {"LJM_STREAM_CAL_LOAD_MAX_NUM_ATTEMPTS":"default", "type":"integer"},
     {"LJM_STREAM_SCANS_RETURN":"default",              "type":"integer", "values":[
                                                            "LJM_STREAM_SCANS_RETURN_ALL",
                                                            "LJM_STREAM_SCANS_RETURN_ALL_OR_NONE"
