--- a/LabJack/LJM/ljm_startup_configs.json
+++ b/LabJack/LJM/ljm_startup_configs.json
@@ -1,6 +1,6 @@
 // ljm_startup_configs.json:
 //   This is the configurations file that is loaded when LJM is started up.
-//   Distributed with LJM version 1.1200.
+//   Distributed with LJM version 1.1300.
 //
 //   Use the string "default" to load the default value for each config
 //   parameter. Otherwise, see the "type" for each config parameter for what
@@ -13,7 +13,7 @@
 //       C:\\ljm.log
 //
 //   Report bugs to support@labjack.com
-//   LabJack's LJM driver/library: http://labjack.com/support/ljm
+//   LabJack's LJM driver/library: https://labjack.com/support/ljm
 
 {
   "LJM_CONFIG_VALUES":
