--- a/LabJack/LJM/ljm_startup_configs.json
+++ b/LabJack/LJM/ljm_startup_configs.json
@@ -63,15 +63,16 @@
     {"LJM_STREAM_BUFFER_MAX_NUM_SECONDS":"default",    "type":"integer"},
     {"LJM_STREAM_CAL_LOAD_MAX_NUM_ATTEMPTS":"default", "type":"integer"},
     {"LJM_STREAM_CONVERT_AIN14": "default",            "type":"boolean", "values":[true, false]},
-    {"LJM_STREAM_SCANS_RETURN":"default",              "type":"integer", "values":[
-                                                           "LJM_STREAM_SCANS_RETURN_ALL",
-                                                           "LJM_STREAM_SCANS_RETURN_ALL_OR_NONE"
-                                                       ]},
+    {"LJM_STREAM_PORT": "default",                     "type":"integer"},
     {"LJM_STREAM_RECEIVE_TIMEOUT_MODE":"default",      "type":"integer", "values":[
                                                            "LJM_STREAM_RECEIVE_TIMEOUT_MODE_CALCULATED",
                                                            "LJM_STREAM_RECEIVE_TIMEOUT_MODE_MANUAL"
                                                        ]},
     {"LJM_STREAM_RECEIVE_TIMEOUT_MS":"default",        "type":"integer"},
+    {"LJM_STREAM_SCANS_RETURN":"default",              "type":"integer", "values":[
+                                                           "LJM_STREAM_SCANS_RETURN_ALL",
+                                                           "LJM_STREAM_SCANS_RETURN_ALL_OR_NONE"
+                                                       ]},
     {"LJM_STREAM_TRANSFERS_PER_SECOND":"default",      "type":"integer"},
     {"LJM_USE_TCP_INIT_FOR_T7_WIFI_TCP":"default",     "type":"boolean", "values":[true, false]},
     {"LJM_USB_SEND_RECEIVE_TIMEOUT_MS":"default",      "type":"integer"},
