--- a/LabJack/LJM/ljm_startup_configs.json
+++ b/LabJack/LJM/ljm_startup_configs.json
@@ -1,6 +1,6 @@
 // ljm_startup_configs.json:
 //   This is the configurations file that is loaded when LJM is started up.
-//   Distributed with LJM version 1.1701.
+//   Distributed with LJM version 1.1702.
 //
 //   Use the string "default" to load the default value for each config
 //   parameter. Otherwise, see the "type" for each config parameter for what
@@ -40,6 +40,7 @@
                                                            "LJM_DEBUG_LOG_MODE_ON_ERROR"
                                                        ]},
     {"LJM_DEBUG_LOG_SLEEP_TIME_MS":"default",          "type":"integer"},
+    {"LJM_DEEP_SEARCH_FILE":"default",                 "type":"string"},
     {"LJM_ERROR_CONSTANTS_FILE":"default",             "type":"string"},
     {"LJM_ETHERNET_OPEN_TIMEOUT_MS":"default",         "type":"integer"},
     {"LJM_ETHERNET_SEND_RECEIVE_TIMEOUT_MS":"default", "type":"integer"},
