--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "2.7"
 script:
-  - python ljmmm_test.py
+  - python ljmmm_test.py && python validate.py LabJack/LJM/ljm_constants.json
