Modified travis.yml to run with python 3.8 and 2.7 and added a dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 python:
+  - "3.8"
   - "2.7"
+install:
+  - pip install future
 script:
   - python ljmmm_test.py && python validate.py LabJack/LJM/ljm_constants.json
