cant use self hosted because of public repo

--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -7,8 +7,7 @@ on:
 jobs:
   export:
 
-    runs-on: self-hosted
-
+    runs-on: ubuntu-latest
     steps:
     - name: Clone Repo
       uses: actions/checkout@v3
