add action token to repo

--- a/.github/workflows/submodule-update.yml
+++ b/.github/workflows/submodule-update.yml
@@ -38,7 +38,7 @@
             id: run_action
             uses: releasehub-com/github-action-create-pr-parent-submodule@v1
             with:
-              github_token: ${{ secrets.ACCESS_TOKEN }}
+              github_token: ${{ secrets.LJM_CONSTANTS_ACTIONS_TOKEN }}
               parent_repository: ${{ env.PARENT_REPOSITORY }}
               checkout_branch: ${{ env.CHECKOUT_BRANCH}}
               pr_against_branch: ${{ env.PR_AGAINST_BRANCH }}
