--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -27,6 +27,7 @@ jobs:
       uses: actions/checkout@v5
       with: 
         ref: ${{ inputs.branch }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
